fix animation page arrows and pictures overlapping

--- a/css/logananimation.css
+++ b/css/logananimation.css
@@ -1,9 +1,9 @@
 .bx-wrapper .bx-controls-direction a {
-	top: 91%;
+	top: 85%;
 }
 
 div.arrow-animation {
-    top: 93%;
+    top: 85%;
 }
 
 ul.bxslider li.donut h2, ul.bxslider li.donut p,
@@ -20,14 +20,14 @@ li.donut, li.dog, li.campfire, li.manmodel {
 li.donut img, li.dog img, li.campfire img, li.manmodel img {
     width: 60%;
     margin-left: 20%;
-    margin-top: 3%;
+    margin-top: 1%;
     padding: 1px;
     border: 1px solid #021a40;
 }
 
 li.manmodel img {
-    width: 40%;
-    margin-left: 30%
+    width: 35%;
+    margin-left: 32.5%
 }
 
 ul.bxslider li a.home {
